# katsdpnetboxutilities

./: .gitignore  Dockerfile  Jenkinsfile  README.md  README.rst  doc-requirements.txt  docker-compose.yml  mypy.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt
doc/: conf.py  index.rst  katsdpnetboxutilities.rst  modules.rst
scripts/: network_diagram.py
src/katsdpnetboxutilities/: __init__.py  connect.py  index.rst  network_diagram.py
src/katsdpnetboxutilities/dns/: query.py
src/katsdpnetboxutilities/network/: diagram.py  draw.py  l3diagram.py  query.py  utils.py
src/katsdpnetboxutilities/service/: .env  main.py
src/katsdpnetboxutilities/system/: .device-md.py.swo  .gitignore  Dockerfile  Makefile  Pipfile  README  README.md  Untitled.ipynb  cal1.md  create_server_doc.sh  device-doconce.py  device-md-copy.py  device-md-no-netbox.py  device-md.py  device.py  example-spinx-conf.py  example-spinx-index.rst  filename  generate-report.sh  header.tex  lsblk.json  make-config.py  make_config.py  mkdocs.yml  netbox  page.css  pandoc.yaml  requirements.txt  tester.py
src/katsdpnetboxutilities/system/config/sarao/: netbox
src/katsdpnetboxutilities/system/make_config/: makeconfig.py  makeconfig.py.backup
src/katsdpnetboxutilities/system/old_docs/: README.md  cal1.md
src/katsdpnetboxutilities/system/reports/cal1/: cal1.md
src/katsdpnetboxutilities/system/reportsCHPC/: deviceCHPC.txt
src/katsdpnetboxutilities/system/reportsCHPC/cms1/: cms1.md
src/katsdpnetboxutilities/system/reportsCHPC/cms2/: cms2.md
src/katsdpnetboxutilities/system/reportsCHPC/cms3/: cms3.md
src/katsdpnetboxutilities/system/reportsCHPC/cms4/: cms4.md
src/katsdpnetboxutilities/system/reportsCHPC/cms5/: cms5.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-1/: dss-hc-1.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-10/: dss-hc-10.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-11/: dss-hc-11.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-12/: dss-hc-12.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-13/: dss-hc-13.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-14/: dss-hc-14.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-15/: dss-hc-15.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-16/: dss-hc-16.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-17/: dss-hc-17.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-18/: dss-hc-18.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-19/: dss-hc-19.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-2/: dss-hc-2.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-20/: dss-hc-20.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-21/: dss-hc-21.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-22/: dss-hc-22.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-23/: dss-hc-23.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-24/: dss-hc-24.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-25/: dss-hc-25.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-26/: dss-hc-26.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-27/: dss-hc-27.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-28/: dss-hc-28.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-29/: dss-hc-29.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-3/: dss-hc-3.md
src/katsdpnetboxutilities/system/reportsCHPC/dss-hc-30/: dss-hc-30.md
src/katsdpnetboxutilities/system/server/: Dockerfile  docker-compose.yml  python-server.py
test/: test_dummy.py  tester.py
test/files/: lsblk.json   lshw.json
(+46 files in other folders)
