[metadata]
name = katsdpnetboxutilities
description = Utilities used with Netbox
long_description = file: README.md
long_description_content_type = text/markdown
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpnetboxutilities@ska.ac.za
url = https://github.com/ska-sa/katsdpnetboxutilities
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    katversion
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    netboxutilities-network-diagram = katsdpnetboxutilities.network.diagram:main
    netboxutilities-l3-diagram = katsdpnetboxutilities.network.l3diagram:main
