[metadata]
name = katsdpnetboxutilities
description = Utilities used with Netbox
long_description = file: README.md
long_description_content_type = text/markdown
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpnetboxutilities@ska.ac.za
url = https://github.com/ska-sa/katsdpnetboxutilities
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    katversion
    ConfigArgParse==1.2.3
    graphviz==0.14.1
    regex==2020.11.13      # for awesome-slugify
    unicode==2.7           # for awesome-slugify
    awesome-slugify==1.6.5
    requests==2.25.0
    certifi==2020.11.8     # for requests
    chardet==3.0.4         # for requests
    idna==2.10             # for requests
    urllib3==1.26.         # for requests
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    netboxutilities-network-diagram = katsdpnetboxutilities.network.diagram:main
    netboxutilities-network-query = katsdpnetboxutilities.network.query:main
    netboxutilities-network-draw = katsdpnetboxutilities.network.draw:main
